// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game.vue matches snapshot 1`] = `
<div class="game screen">
  <game-header-stub difficulty="Easy" board="[object Object]"></game-header-stub>
  <game-board-stub board="[object Object]"></game-board-stub>
  <user-input-stub board="[object Object]"></user-input-stub>
  <!---->
</div>
`;

exports[`Game.vue when the board is completed matches snapshot 1`] = `
<div class="game screen">
  <!---->
  <!---->
  <!---->
  <div class="completed">
    You win!

    <button>Okay</button></div>
</div>
`;
